UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_CoS__c/Pricing_CoS__c.object-meta.xml
<CustomObject>
    <label>Pricing Class of Service Charge</label>
    <nameField>
        <label>Product Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Pricing Class of Service Charges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>