UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_CoS__c/fields/CoS__c.field-meta.xml
<CustomField>
    <fullName>CoS__c</fullName>
    <label>Class Of Service</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Silver</fullName>
            </value>
            <value>
                <fullName>Gold</fullName>
            </value>
            <value>
                <fullName>Platinum</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>