UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_CoS__c/fields/MRC__c.field-meta.xml
<CustomField>
    <fullName>MRC__c</fullName>
    <label>MRC</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>