UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_CoS__c/fields/Speed__c.field-meta.xml
<CustomField>
    <fullName>Speed__c</fullName>
    <label>Speed</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>