UCF-APR2.4/ftr main/force-app/main/default/objects/Pricing_CoS__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CoS__c</columns>
    <columns>Speed__c</columns>
    <columns>MRC__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>